- synced with latest build tools - updated npm packages - migrated tests to markdown-it-testgen compatible approach with ist+soll fixture text file(s) - all tests pass

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: node_js
 node_js:
-- '4'
-cache:
-  directories:
-  - node_modules
+  - 'lts/*'
+  - 10
+  - 12
+  - node
+script: npm run build
+before_install: make prep-ci
+after_success: npm run cov
